--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,13 @@ html{
 }
 body{
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 main{
-    height: 70vh;
+    min-height: 70vh;
     width: 60vw;
     background-color: #383838;
     color: white;
@@ -20,13 +24,18 @@ main{
     margin: 0 auto;
     border-radius: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    gap: 30px;
 }
-#colocar_X{
+#main_menor{
+    width: 50vw;
+    height: 77vh;
     display: flex;
-    flex-direction: column;
-    justify-content: end;
+    gap: 30px;
 }
-#esquerda{
+#main_sub{
+    /* min-height:65vh; */
+}
+.esquerda{
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -45,6 +54,7 @@ form input{
 }
 input::placeholder {
     color: white;
+    padding-left: 10px;
  }
 a{
     text-decoration: none;
@@ -58,3 +68,71 @@ button{
     color: black;
     font-size: 16px;
 }
+#or_sing{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#or_sing hr{
+    width: 100px;
+    height: 1px;
+    background-color: #292929;
+    border: none;
+}
+.imgs{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.direita{
+    display: flex;
+    flex-direction: column;
+}
+.colocar_X{
+    display: flex;
+    justify-content: end;
+    /* align-items: end; */
+}
+#X_singUp{
+    /* display: flex;
+    justify-content: end; */
+    margin-top: 15px;
+}
+.hover_img:hover{
+    cursor: pointer;
+}
+.checkbox{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+input[type=checkbox]{
+    width: 30px;
+}
+#conteudo_baixo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    /* width: %; */
+}
+#conteudo_baixo p{
+    color: #959597;
+}
+#direita{
+    width: 40%;
+}
+#form form{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    margin-top: 20px;
+}
+#conteudo_baixo form input{
+    width: 25vw;
+}
+/* #X_subs{
+
+} */
