--- a/css/style.css
+++ b/css/style.css
@@ -154,12 +154,12 @@ input[type=checkbox]{
 #conteudo_baixo form input{
     width: 25vw;
 }
-#conteudo_baixo{
-    margin-top: 100px;
-    margin-left: 50px
+#X_subs {
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
-#X_subs{
-    /* ARRUMAR O MAIS RÁPIDO POSSIVEL */
-    margin-top: -100px;
-    margin-right: 30px;
+
+#main_sub {
+    position: relative; 
 }
